--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
         "format": "prettier . --write --log-level=warn"
     },
     "dependencies": {
+        "@monaco-editor/react": "^4.6.0",
+        "@radix-ui/colors": "^3.0.0",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/themes": "^3.0.1",
+        "axios": "^1.6.8",
+        "clsx": "^2.1.0",
+        "date-fns": "^3.6.0",
         "next": "14.1.4",
         "prettier": "^3.2.5",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-json-view": "^1.21.3",
+        "rsuite": "^5.58.1",
+        "tailwind-merge": "^2.2.2"
     },
     "devDependencies": {
         "autoprefixer": "^10.0.1",
