--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@radix-ui/colors": "^3.0.0",
         "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/themes": "^3.0.1",
+        "@uidotdev/usehooks": "^2.4.1",
         "axios": "^1.6.8",
         "clsx": "^2.1.0",
         "date-fns": "^3.6.0",
