--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@radix-ui/themes": "^3.0.1",
         "@uidotdev/usehooks": "^2.4.1",
         "axios": "^1.6.8",
+        "base-64": "^1.0.0",
         "clsx": "^2.1.0",
         "date-fns": "^3.6.0",
         "next": "14.1.4",
