--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "format": "prettier . --write --log-level=warn"
     },
     "dependencies": {
+        "@microlink/react-json-view": "^1.23.0",
         "@monaco-editor/react": "^4.6.0",
         "@radix-ui/colors": "^3.0.0",
         "@radix-ui/react-icons": "^1.3.0",
@@ -23,7 +24,6 @@
         "prettier": "^3.2.5",
         "react": "^18",
         "react-dom": "^18",
-        "react-json-view": "^1.21.3",
         "rsuite": "^5.58.1",
         "tailwind-merge": "^2.2.2"
     },
